[project]
name = "swapnetwork"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Madhav Krishnan Vijayan", email = "39261345+madhavkrishnan@users.noreply.github.com"},
]
dependencies = ["stim>=1.15.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "jupyterlab>=4.4.7",
]
[tool.pdm]
distribution = false
