[project]
name = "swapnetwork"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Madhav Krishnan Vijayan", email = "39261345+madhavkrishnan@users.noreply.github.com"},
]
dependencies = ["stim>=1.15.0", "qiskit>=2.1.2", "stimcirq>=1.15.0", "ply>=3.11"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "jupyterlab>=4.4.7",
]
test = [
    "pytest>=8.4.2",
]
[tool.pdm]
distribution = true
