[project]
name = "swapnetwork"
version = "0.1.0"
description = "Package to map stim circuits to a lnn architecture"
authors = [
    {name = "Madhav Krishnan Vijayan", email = "39261345+madhavkrishnan@users.noreply.github.com"},
]
dependencies = ["stim>=1.15.0", "qiskit>=2.1.2", "stimcirq>=1.15.0", "ply>=3.11"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "pytest>=8.4.2",
]


